public class SporeNoEffect extends Spore {
    public SporeNoEffect() { this.nutrientValue = 1; }
    public void applyTo(Insect i) { }
}

