public class StunningEffect extends Spore {
    public StunningEffect() { this.nutrientValue = 3; }
    public void applyTo(Insect i) { }
}

